# whoop-plus

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
clients/: whoop.py
queries/: get_trends.sql
utils/: graphs.py
